Force image sizes to prevent load-jumping

--- a/static/sass/_patterns_media-object--snap.scss
+++ b/static/sass/_patterns_media-object--snap.scss
@@ -43,8 +43,10 @@
     }
 
     .p-media-object__image {
+      height: 3rem;
       max-height: 3rem;
       max-width: 3rem;
+      width: 3rem;
     }
 
     &.is-placeholder {
@@ -52,8 +54,6 @@
         background: $color-mid-light;
         border-radius: 2px;
         display: block;
-        height: 3rem;
-        width: 3rem;
       }
 
       .p-media-object__title {
@@ -91,14 +91,17 @@
 
   .snapcraft-p-grid--featured {
     .p-media-object--snap {
-
       .p-media-object__image {
+        height: 3rem;
         max-height: 3rem;
         max-width: 3rem;
+        width: 3rem;
 
         @media screen and (min-width: $breakpoint-small) {
+          height: 5rem;
           max-height: 5rem;
           max-width: 5rem;
+          width: 5rem;
         }
       }
     }
